# medial-sphere-preconditioning

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
models/anapsidea/: scale.py  scene.txt
models/bunny/: scene_lap_lambda_high.txt  scene_lap_lambda_low.txt  scene_lap_lambda_mid.txt
models/freedman/: freedman_untangle.txt
models/goeritz/: scene.txt  scene_beta_0.txt  scene_beta_1.txt  scene_qn.txt
models/haken/: knot.py  scene.txt  test.py
models/ochiai1/: scene.txt
models/ochiai2/: knot.py  scene.txt  scene_beta_0.txt  scene_beta_1.txt
models/ochiai3/: .polyscope.ini  knot.py  scene.txt  scene_n2.txt
models/ochiai4/: knot.py  scene.txt
models/spot/: scene.txt  scene_dense.txt  scene_lap.txt
models/thistlethwaite/: scene.txt  scene_qn.txt
models/trefoil/: scene_trefoil0001.txt
modules/: CMakeLists.txt
modules/include/modules/: line_search.h  medial_axis_3d.h  read_curve.h  remesh_curve.h  scene_file.h
modules/include/modules/volume_filling_energy/: laplacian.h  newton.h  newton_test.h  quasi_newton.h
modules/src/: line_search.cpp  medial_axis_3d.cpp  read_curve.cpp  remesh_curve.cpp  scene_file.cpp
modules/src/volume_filling_energy/: laplacian.cpp  newton.cpp  newton_matrix.cpp  newton_test.cpp  quasi_newton.cpp
src/: knot_untangling.cpp  main.cpp
